test/files/pos/t10639/Size_1.java
public enum Size_1 implements Identifiable_1 {
    SMALL, MEDIUM, LARGE;
}
