test/files/neg/t8700b/Foo.java
public enum Foo {
    A,
    B
}
